fix join
